--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.5.0",
     "next": "15.2.2",
     "react": "^19.0.0",
