--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paystack/inline-js": "^2.22.7",
+    "@react-google-maps/api": "^2.20.7",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.12.1",
